properties and META-INF file must be unix format, otherwise the birt report engine can't find its libraries.

--- a/unsupported/platform/plugins/org.w3c.sac_1.3.0.v20070710/about_files/copyright-software-20021231_files/base.css
+++ b/unsupported/platform/plugins/org.w3c.sac_1.3.0.v20070710/about_files/copyright-software-20021231_files/base.css
@@ -2,7 +2,7 @@
    The following software licensing rules apply:
    http://www.w3.org/Consortium/Legal/copyright-software */
 
-/* $Id: base.css,v 1.2 2009/02/16 18:02:56 jost Exp $ */
+/* $Id$ */
 
 /* this style sheet defines the basic style for all W3C pages */
 /* you can point to this by adding:
